2003-08-03  Callum McKenzie  <callum@physics.otago.ac.nz>

	* help/C/gtali.xml: 2.4 updates, images not updated yet.

	* setup.c: 
	* yahtzee.h:
	* yahtzee.c:
	* gtali.schemas.in
	* gyahtzee.c: Removed the "Extra Yahtzee Bonus" and "Enforce Joker
	Rules" dialogs since while the values where set they were never
	used anywhere in the actual game. Since I don't know what they are
	meant to do and no one is complaining about them I have removed
	the code entirely.

2003-07-09  Callum McKenzie  <callum@physics.otago.ac.nz>

	* gtali.desktop.in: Update name to fit HIG (bug 116916).

2003-07-06  Callum McKenzie  <callum@physics.otago.ac.nz>

	* clist.c (update_score_cell): Clear cells with a score of -1,
	this allows undo to update the display correctly.

2003-07-02  Callum McKenzie <callum@physics.otago.ac.nz>
	* Makefile.am: Build fixes.

2003-06-22  Callum McKenzie  <callum@physics.otago.ac.nz>

	* gyahtzee.c (GyahtzeeCreateMainWindow): Space before punctuation
	fixes as per bug #115694.

2003-06-21  Callum McKenzie  <callum@physics.otago.ac.nz>

	* yahtzee.c: 
	* yahtzee.h:
	* gyahtzee.c: Undo sensitivity now depends on the game state.

	* clist.c (create_score_list): Fix a compiler warning.

2003-06-20  William Jon McCann  <mccann@jhu.edu>

	* clist.c (create_score_list): Added set_rules_hint to
	tree view, this gives us alternating color rows.

2003-06-18  William Jon McCann  <mccann@jhu.edu>

	* setup.c: 
	* gyahtzee.c: Fixed compiler warnings.

2003-06-16  William Jon McCann  <mccann@jhu.edu>

	* setup.c (setup_game): More HIG spacing and alignment fixes.

2003-06-11  William Jon McCann  <mccann@jhu.edu>

	* setup.c (setup_game): HIG fixes for preferences dialog.

2003-06-11  Callum McKenzie  <callum@physics.otago.ac.nz>

	* gyahtzee.c : i18n fixes from Christian Neumair (bug #114875).

2003-06-09  William Jon McCann  <mccann@jhu.edu>

	* setup.c: Removed separator from dialogs as in HIG.

2003-06-05  William Jon McCann  <mccann@jhu.edu>
