@@ -25,6 +25,30 @@
     </schema>
 
     <schema>
+      <key>/schemas/apps/gtali/DelayBetweenRolls</key>
+      <applyto>/apps/gtali/DelayBetweenRolls</applyto>
+      <owner>gtali</owner>
+      <type>bool</type>
+      <default>FALSE</default>
+      <locale name="C">
+        <short>Delay between rolls</short>
+        <long>Choose whether or not to insert a delay between the computer's dice rolls so the player can follow what it is doing.</long>
+      </locale>
+    </schema>
+
+    <schema>
+      <key>/schemas/apps/gtali/DisplayComputerThoughts</key>
+      <applyto>/apps/gtali/DisplayComputerThoughts</applyto>
+      <owner>gtali</owner>
+      <type>bool</type>
+      <default>FALSE</default>
+      <locale name="C">
+        <short>Display the computer's thoughs</short>
+        <long>If set to true, a dump of the AI's working will be done to standard output.</long>
+      </locale>
+    </schema>
+
+    <schema>
       <key>/schemas/apps/gtali/PlayerNames</key>
       <applyto>/apps/gtali/PlayerNames</applyto>
       <owner>gtali</owner>
